// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink change when isAuthenticated is true or false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    isAuthenticated={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="App-title"
>
          <span>
                    Welcome to React
          </span>
</h1>,
        <Menu
          pointing={true}
>
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Home"
                    to="/"
          />
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Users"
                    to="/users"
          />
          <MenuMenu
                    position="right"
          >
                    <Unknown>
                              <MenuItem
                                        activeClassName="active"
                                        as={[Function]}
                                        exact={true}
                                        name="Account"
                                        to="/account"
                              />
                              <MenuItem
                                        activeClassName="active"
                                        as={[Function]}
                                        exact={true}
                                        name="Logout"
                                        to="/logout"
                              />
                    </Unknown>
          </MenuMenu>
</Menu>,
      ],
      "className": "App-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            Welcome to React
</span>,
          "className": "App-title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome to React",
          },
          "ref": null,
          "rendered": "Welcome to React",
          "type": "span",
        },
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Home"
              to="/"
/>,
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Users"
              to="/users"
/>,
            <MenuMenu
              position="right"
>
              <Unknown>
                            <MenuItem
                                          activeClassName="active"
                                          as={[Function]}
                                          exact={true}
                                          name="Account"
                                          to="/account"
                            />
                            <MenuItem
                                          activeClassName="active"
                                          as={[Function]}
                                          exact={true}
                                          name="Logout"
                                          to="/logout"
                            />
              </Unknown>
</MenuMenu>,
          ],
          "pointing": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Home",
              "to": "/",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Users",
              "to": "/users",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown>
                <MenuItem
                                activeClassName="active"
                                as={[Function]}
                                exact={true}
                                name="Account"
                                to="/account"
                />
                <MenuItem
                                activeClassName="active"
                                as={[Function]}
                                exact={true}
                                name="Logout"
                                to="/logout"
                />
</Unknown>,
              "position": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Account"
                    to="/account"
/>,
                  <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Logout"
                    to="/logout"
/>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "activeClassName": "active",
                    "as": [Function],
                    "exact": true,
                    "name": "Account",
                    "to": "/account",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "activeClassName": "active",
                    "as": [Function],
                    "exact": true,
                    "name": "Logout",
                    "to": "/logout",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": Symbol(react.fragment),
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="App-title"
>
            <span>
                        Welcome to React
            </span>
</h1>,
          <Menu
            pointing={true}
>
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Home"
                        to="/"
            />
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Users"
                        to="/users"
            />
            <MenuMenu
                        position="right"
            >
                        <Unknown>
                                    <MenuItem
                                                activeClassName="active"
                                                as={[Function]}
                                                exact={true}
                                                name="Account"
                                                to="/account"
                                    />
                                    <MenuItem
                                                activeClassName="active"
                                                as={[Function]}
                                                exact={true}
                                                name="Logout"
                                                to="/logout"
                                    />
                        </Unknown>
            </MenuMenu>
</Menu>,
        ],
        "className": "App-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              Welcome to React
</span>,
            "className": "App-title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Welcome to React",
            },
            "ref": null,
            "rendered": "Welcome to React",
            "type": "span",
          },
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Home"
                to="/"
/>,
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Users"
                to="/users"
/>,
              <MenuMenu
                position="right"
>
                <Unknown>
                                <MenuItem
                                                activeClassName="active"
                                                as={[Function]}
                                                exact={true}
                                                name="Account"
                                                to="/account"
                                />
                                <MenuItem
                                                activeClassName="active"
                                                as={[Function]}
                                                exact={true}
                                                name="Logout"
                                                to="/logout"
                                />
                </Unknown>
</MenuMenu>,
            ],
            "pointing": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Home",
                "to": "/",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Users",
                "to": "/users",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <Unknown>
                  <MenuItem
                                    activeClassName="active"
                                    as={[Function]}
                                    exact={true}
                                    name="Account"
                                    to="/account"
                  />
                  <MenuItem
                                    activeClassName="active"
                                    as={[Function]}
                                    exact={true}
                                    name="Logout"
                                    to="/logout"
                  />
</Unknown>,
                "position": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <MenuItem
                      activeClassName="active"
                      as={[Function]}
                      exact={true}
                      name="Account"
                      to="/account"
/>,
                    <MenuItem
                      activeClassName="active"
                      as={[Function]}
                      exact={true}
                      name="Logout"
                      to="/logout"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "activeClassName": "active",
                      "as": [Function],
                      "exact": true,
                      "name": "Account",
                      "to": "/account",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "activeClassName": "active",
                      "as": [Function],
                      "exact": true,
                      "name": "Logout",
                      "to": "/logout",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": Symbol(react.fragment),
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NavLink change when isAuthenticated is true or false 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    isAuthenticated={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="App-title"
>
          <span>
                    Welcome to React
          </span>
</h1>,
        <Menu
          pointing={true}
>
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Home"
                    to="/"
          />
          <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Users"
                    to="/users"
          />
          <MenuMenu
                    position="right"
          >
                    <Unknown>
                              <MenuItem
                                        activeClassName="active"
                                        as={[Function]}
                                        exact={true}
                                        name="Register"
                                        to="/register"
                              />
                              <MenuItem
                                        activeClassName="active"
                                        as={[Function]}
                                        exact={true}
                                        name="Login"
                                        to="/login"
                              />
                    </Unknown>
          </MenuMenu>
</Menu>,
      ],
      "className": "App-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            Welcome to React
</span>,
          "className": "App-title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome to React",
          },
          "ref": null,
          "rendered": "Welcome to React",
          "type": "span",
        },
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Home"
              to="/"
/>,
            <MenuItem
              activeClassName="active"
              as={[Function]}
              exact={true}
              name="Users"
              to="/users"
/>,
            <MenuMenu
              position="right"
>
              <Unknown>
                            <MenuItem
                                          activeClassName="active"
                                          as={[Function]}
                                          exact={true}
                                          name="Register"
                                          to="/register"
                            />
                            <MenuItem
                                          activeClassName="active"
                                          as={[Function]}
                                          exact={true}
                                          name="Login"
                                          to="/login"
                            />
              </Unknown>
</MenuMenu>,
          ],
          "pointing": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Home",
              "to": "/",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeClassName": "active",
              "as": [Function],
              "exact": true,
              "name": "Users",
              "to": "/users",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown>
                <MenuItem
                                activeClassName="active"
                                as={[Function]}
                                exact={true}
                                name="Register"
                                to="/register"
                />
                <MenuItem
                                activeClassName="active"
                                as={[Function]}
                                exact={true}
                                name="Login"
                                to="/login"
                />
</Unknown>,
              "position": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Register"
                    to="/register"
/>,
                  <MenuItem
                    activeClassName="active"
                    as={[Function]}
                    exact={true}
                    name="Login"
                    to="/login"
/>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "activeClassName": "active",
                    "as": [Function],
                    "exact": true,
                    "name": "Register",
                    "to": "/register",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "activeClassName": "active",
                    "as": [Function],
                    "exact": true,
                    "name": "Login",
                    "to": "/login",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": Symbol(react.fragment),
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="App-title"
>
            <span>
                        Welcome to React
            </span>
</h1>,
          <Menu
            pointing={true}
>
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Home"
                        to="/"
            />
            <MenuItem
                        activeClassName="active"
                        as={[Function]}
                        exact={true}
                        name="Users"
                        to="/users"
            />
            <MenuMenu
                        position="right"
            >
                        <Unknown>
                                    <MenuItem
                                                activeClassName="active"
                                                as={[Function]}
                                                exact={true}
                                                name="Register"
                                                to="/register"
                                    />
                                    <MenuItem
                                                activeClassName="active"
                                                as={[Function]}
                                                exact={true}
                                                name="Login"
                                                to="/login"
                                    />
                        </Unknown>
            </MenuMenu>
</Menu>,
        ],
        "className": "App-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              Welcome to React
</span>,
            "className": "App-title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Welcome to React",
            },
            "ref": null,
            "rendered": "Welcome to React",
            "type": "span",
          },
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Home"
                to="/"
/>,
              <MenuItem
                activeClassName="active"
                as={[Function]}
                exact={true}
                name="Users"
                to="/users"
/>,
              <MenuMenu
                position="right"
>
                <Unknown>
                                <MenuItem
                                                activeClassName="active"
                                                as={[Function]}
                                                exact={true}
                                                name="Register"
                                                to="/register"
                                />
                                <MenuItem
                                                activeClassName="active"
                                                as={[Function]}
                                                exact={true}
                                                name="Login"
                                                to="/login"
                                />
                </Unknown>
</MenuMenu>,
            ],
            "pointing": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Home",
                "to": "/",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeClassName": "active",
                "as": [Function],
                "exact": true,
                "name": "Users",
                "to": "/users",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <Unknown>
                  <MenuItem
                                    activeClassName="active"
                                    as={[Function]}
                                    exact={true}
                                    name="Register"
                                    to="/register"
                  />
                  <MenuItem
                                    activeClassName="active"
                                    as={[Function]}
                                    exact={true}
                                    name="Login"
                                    to="/login"
                  />
</Unknown>,
                "position": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <MenuItem
                      activeClassName="active"
                      as={[Function]}
                      exact={true}
                      name="Register"
                      to="/register"
/>,
                    <MenuItem
                      activeClassName="active"
                      as={[Function]}
                      exact={true}
                      name="Login"
                      to="/login"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "activeClassName": "active",
                      "as": [Function],
                      "exact": true,
                      "name": "Register",
                      "to": "/register",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "activeClassName": "active",
                      "as": [Function],
                      "exact": true,
                      "name": "Login",
                      "to": "/login",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": Symbol(react.fragment),
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
